--- a/src/components/molecules/Header/header.scss
+++ b/src/components/molecules/Header/header.scss
@@ -4,6 +4,10 @@
     padding: 20px 40px;
     align-items: center;
     background-color: #68b35c;
+    position: fixed;
+    width: 95%;
+    top:0px;
+    left: 0px;
 
      .logo-app{
         font-size: 20px;
